feat: adds available attr in menu item
